# truthgraph

./: .dockerignore  .env.example  .gitattributes  .gitignore  ACCURACY_FRAMEWORK_QUICK_START.md  API_INTEGRATION_SUMMARY.md  API_QUICK_REFERENCE.md  API_TEST_ANALYSIS_INDEX.md  API_TEST_ISSUES_QUICK_REFERENCE.md  API_TEST_SUITE_ANALYSIS.md  DATA_LICENSE  DOCKERFILE_FIX_ALEMBIC.md  DOCKER_ANALYSIS_INDEX.md  DOCKER_ANALYSIS_SUMMARY.txt  DOCKER_METRICS.json  DOCKER_QUICK_CHECKLIST.md  DOCKER_README.md  DOCKER_SETUP.md  DOCKER_TEST_SETUP_COMPLETE.md  DOCUMENTATION_MIGRATION_PLAN.md  DOCUMENTATION_ORGANIZATION_GUIDE.md  DOCUMENTATION_REORGANIZATION_SUMMARY.md  DOCUMENTATION_STRUCTURE_VISUAL.md  FEATURE_1.4_SUMMARY.md  FEATURE_11_DELIVERY_REPORT.md  FEATURE_1_1_SUMMARY.md  FEATURE_1_3_COMPLETION.md  FEATURE_1_5_COMPLETION.md  FEATURE_1_6_COMPLETION.md  FEATURE_1_7_FINAL_REPORT.md  FEATURE_2_1_COORDINATION_INDEX.md  FEATURE_2_1_COORDINATION_PLAN.md  FEATURE_2_1_FINAL_REPORT.md  FEATURE_2_1_QUICK_START.md  FEATURE_2_2_FINAL_REPORT.md  FEATURE_2_3_FINAL_REPORT.md  FEATURE_2_4_FINAL_REPORT.md  FEATURE_2_5_FINAL_REPORT.md  FEATURE_3_1_ACCURACY_FRAMEWORK_REPORT.md  FEATURE_3_2_COMPLETION_CHECKLIST.md  (+37 more)
.claude/: settings.local.json
alembic/: README.md  env.py
archive/: README.md
backend/: requirements-ml.txt
docker/: .dockerignore  api.Dockerfile  docker-build-test.sh  docker-health-check.sh  frontend.Dockerfile  init-db.sql
docs/: DEVELOPER_GUIDE.md  DOCKER_ML_SETUP.md  PERFORMANCE_OPTIMIZATION.md  RATE_LIMITING.md  README.md  verification_pipeline.md
examples/: verification_pipeline_example.py
frontend/: app.py
frontend-react/: Dockerfile.dev  index.html  package.json
planning/: README.md
scripts/: README_CORPUS_LOADING.md  README_PERFORMANCE_TOOLS.md  append_fever_fixtures.py  benchmark_embeddings.py  benchmark_nli.py  benchmark_validation.py  benchmark_vector_search.py  benchmark_verdict_aggregation.py  benchmark_verification_pipeline.py  (+15 more)
(+442 files in other folders)
